# astockevent-mcp

./: .gitignore  CLAUDE.md  LICENSE  PHASE2_PROMPT.md  README.md  pyproject.toml
docs/: api-contract.md
src/astockevent/: __init__.py
src/astockevent/db/: __init__.py  database.py  models.py
src/astockevent/mcp/: __init__.py  __main__.py  server.py  stdio_server.py
src/astockevent/models/: __init__.py  schemas.py
web/: __init__.py  admin.html  dashboard.html  mcp-guide.html  report.html  review.html  status.html
