[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "astockevent"
version = "0.2.1"
description = "AStockEvent MCP Server — Structured A-share announcement event feed for AI agents"
readme = "README.md"
license = "MIT"
authors = [
    {name = "AStockEvent Team", email = "astockevent@outlook.com"},
]
keywords = ["mcp", "a-share", "event-feed", "financial-data", "stock", "announcement", "ai-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.26.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://astockevent.com"
Repository = "https://github.com/NengjiangLunpi/astockevent-mcp"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[project.scripts]
astockevent-mcp = "astockevent.mcp:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
